Finished the basic version of the APIs

--- a/Pipfile
+++ b/Pipfile
@@ -5,6 +5,10 @@ name = "pypi"
 
 [packages]
 django = "*"
+mysqlclient = "*"
+djangorestframework = "*"
+django-debug-toolbar = "*"
+drf-nested-routers = "*"
 
 [dev-packages]
 
