--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ django-debug-toolbar = "*"
 drf-nested-routers = "*"
 djangorestframework-simplejwt = "*"
 djoser = "*"
+django-cors-headers = "*"
 
 [dev-packages]
 
