--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,17 @@ drf-nested-routers = "*"
 djangorestframework-simplejwt = "*"
 djoser = "*"
 django-cors-headers = "*"
+celery = "*"
+redis = "*"
+django-celery-beat = "*"
+django-redis = "*"
+plyer = "*"
+django-push-notifications = "*"
+pywebpush = "*"
+webpush = "*"
+pytest = "*"
+pytest-django = "*"
+drf-yasg = "*"
 
 [dev-packages]
 
